# selda

selda-mysql/: selda-mysql.cabal
selda-mysql/src/Database/Selda/: MySQL.hs
selda-mysql/src/Database/Selda/MySQL/: Encoding.hs
selda/src/Database/Selda/Backend/: Internal.hs
