name:                selda-mysql
version:             0.1.4.0
synopsis:            MySQL backend for the Selda database EDSL.
description:         MySQL backend for the Selda database EDSL.
                     Requires the MySQL @libpq@ development libraries to be
                     installed.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad, Winter Han
maintainer:          anton@ekblad.cc, drkoster@qq.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag haste
  default: False
  description: Package is being installed for Haste.

library
  exposed-modules:
    Database.Selda.MySQL
  other-modules:
    Database.Selda.MySQL.Encoding
  other-extensions:
    GADTs
    RecordWildCards
    OverloadedStrings
    CPP
  build-depends:
      base             >=4.8     && <5
    , bytestring       >=0.9   && <0.11
    , exceptions       >=0.8     && <0.9
    , selda            >=0.1.10.0 && <0.2
    , text             >=1.0     && <1.3
  if !flag(haste)
    build-depends:
      mysql-haskell    >=0.8.2 && <0.8.4
  if impl(ghc < 8.11)
    build-depends:
      transformers  >= 0.1.4 && <0.6
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
